Campaigns Link Updated

--- a/campaigns/features/index.html
+++ b/campaigns/features/index.html
@@ -145,15 +145,15 @@
           "@type": "ListItem", 
           "position": "2", 
           "item": { 
-            "@id": "https://www.mumara.com/campaignsplus/", 
-            "name": "Campaigns+" 
+            "@id": "https://www.mumara.com/campaigns/", 
+            "name": "Campaigns" 
           } 
         },
         { 
           "@type": "ListItem", 
           "position": "3", 
           "item": { 
-            "@id": "https://www.mumara.com/campaignsplus/campaign-feature/", 
+            "@id": "https://www.mumara.com/campaigns/features/", 
             "name": "Feature" 
           } 
         }
