--- a/one/pricing/index.html
+++ b/one/pricing/index.html
@@ -46,6 +46,122 @@
   <link href="../../assets/css/fonts.css" rel="stylesheet">
   <link href="./css/mbSlider.css" rel="stylesheet" >
   <link href="./css/style.css" rel="stylesheet" >
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Mumara",
+      "alternateName": "Marketing Automation &amp; Customer Engagement Tools | Mumara",
+      "url": "https://www.mumara.com",
+      "logo": "https://www.mumara.com/assets/img/logo-dark.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+1 (844) 686 – 2721",
+        "contactType": "customer service"
+      },
+      "sameAs": [
+        "https://www.facebook.com/MumaraApps",
+        "https://twitter.com/MumaraApps",
+        "https://plus.google.com/+MumaraEmailMarketer",
+        "https://www.youtube.com/channel/UC1k6voQOVss0_PWg7CfJTdw",
+        "https://www.linkedin.com/company/mumara"
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"ItemList",
+      "itemListElement":[
+        {
+          "@type":"ListItem",
+          "position":1,
+          "url":"https://www.mumara.com/campaigns/"
+        },
+        {
+          "@type":"ListItem",
+          "position":2,
+          "url":"https://www.mumara.com/one/"
+        },
+        {
+          "@type":"ListItem",
+          "position":3,
+          "url":"https://www.mumara.com/sms/"
+        },
+        {
+          "@type":"ListItem",
+          "position":4,
+          "url":"https://www.mumara.com/smsplus/"
+        },
+        {
+          "@type":"ListItem",
+          "position":5,
+          "url":"https://www.mumara.com/classic/"
+        }
+      ]
+    }
+  </script>   
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Mumara",
+      "url": "https://www.mumara.com",
+      "sameAs": [
+        "https://www.facebook.com/MumaraApps",
+        "https://twitter.com/MumaraApps",
+        "https://plus.google.com/+MumaraEmailMarketer",
+        "https://www.youtube.com/channel/UC1k6voQOVss0_PWg7CfJTdw",
+        "https://www.linkedin.com/company/mumara"
+      ]
+    }
+  </script>  
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "WebSite",
+      "name": "Mumara",
+      "url": "https://www.mumara.com/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://www.mumara.com/?s={s}",
+        "query-input": "required name=s"
+      }
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org/", 
+      "@type": "BreadcrumbList", 
+      "itemListElement": [
+        { 
+          "@type": "ListItem", 
+          "position": "1", 
+          "item": { 
+            "@id": "https://www.mumara.com", 
+            "name": "Mumara",
+            "image": "https://www.mumara.com/assets/img/logo-dark.png" 
+          } 
+        },
+        { 
+          "@type": "ListItem", 
+          "position": "2", 
+          "item": { 
+            "@id": "https://www.mumara.com/one/", 
+            "name": "MumaraOne" 
+          } 
+        },
+        { 
+          "@type": "ListItem", 
+          "position": "3", 
+          "item": { 
+            "@id": "https://www.mumara.com/one/pricing/", 
+            "name": "Pricing" 
+          } 
+        }
+      ]
+    }
+  </script>
 </head>
 
 <body class="classic-pricing">
@@ -573,6 +689,36 @@
       });
     });
   </script>
+  
+<script data-ad-client="ca-pub-7570269198350551" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script id="sbinit" src="https://dashboard.mumara.com/js/init.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-63566119-1', 'auto');
+    ga('send', 'pageview');
+</script>
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '329504770823436');
+  fbq('track', 'Mumara PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=329504770823436&ev=ViewContent&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
 
 
 </body>
